# minesweeperizer

./: CMakeLists.txt  LICENSE  README.md
src/: application.cc  application.h  field.h  main.cpp
src/helpers/: texture.cc  texture.hpp
